# melina-studio

./: .env.template  .gitignore  README.md  __init__.py  journey.md  main.py  pyproject.toml
app/: __init__.py  main.py
app/apis/: edge_routes.py  graph_routes.py  node_routes.py
app/config/: config.py  db.py
app/melina/: __init__.py
app/melina/controllers/node_cruds/: node_crud.py
app/melina/core/: __init__.py  executor.py
app/melina/graph/: graph.py
app/melina/graph/edges/: edge.py
app/melina/graph/nodes/: llm_node.py
app/melina/models/: graph.py  llm.py  node.py
app/melina/services/edge_cruds/: edge_crud.py
app/melina/services/graph_cruds/: graph_crud.py
app/melina/services/node_cruds/: node_crud.py
app/scripts/: script.py
