[project]
name = "melina-backend"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    {name = "aryanShaw",email = "aryanrot234@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]

[tool.poetry]
packages = []

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
