[tool.poetry]
name = "melina-backend"
version = "0.1.0"
description = ""
authors = ["aryanShaw <aryanrot234@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = ">=0.34.0,<0.35.0"
certifi = ">=2025.1.31,<2026.0.0"
clickhouse-driver = ">=0.2.9,<0.3.0"
huggingface-hub = ">=0.30.2,<0.31.0"
langsmith = ">=0.3.30,<0.4.0"
numpy = ">=2.2.4,<3.0.0"
openai = ">=1.72.0,<2.0.0"
pandas = ">=2.2.3,<3.0.0"
python-dotenv = ">=1.1.0,<2.0.0"
pyyaml = ">=6.0.2,<7.0.0"
tiktoken = ">=0.9.0,<0.10.0"
groq = ">=0.22.0,<0.23.0"
anthropic = ">=0.49.0,<0.50.0"
pyjwt = ">=2.10.1,<3.0.0"
prometheus-client = ">=0.21.1,<0.22.0"
motor = ">=3.7.0,<4.0.0"
pydantic = ">=2.11.3,<3.0.0"
langgraph = ">=0.3.28,<0.4.0"
grandalf = ">=0.8,<0.9"
logger = ">=1.4,<2.0"
apscheduler = ">=3.11.0,<4.0.0"
langgraph-sdk = ">=0.1.61,<0.2.0"
langgraph-checkpoint = ">=2.0.24,<3.0.0"
langchain = ">=0.3.23,<0.4.0"
langchain-core = ">=0.3.51,<0.4.0"
langchain-text-splitters = ">=0.3.8,<0.4.0"
langchain-openai = ">=0.3.12,<0.4.0"
langchain-community = ">=0.3.21,<0.4.0"
langchain-cohere = ">=0.4.4,<0.5.0"
langchain-deepseek = ">=0.1.3,<0.2.0"
langchain-groq = ">=0.3.2,<0.4.0"
langchain-anthropic = ">=0.3.10,<0.4.0"
langchain-pinecone = ">=0.2.5,<0.3.0"
langchain-xai = ">=0.2.3,<0.3.0"
langchain-mistralai = ">=0.2.10,<0.3.0"
langchain-fireworks = ">=0.2.9,<0.3.0"
langchain-together = ">=0.3.0,<0.4.0"
langchain-google-vertexai = ">=2.0.20,<3.0.0"
langchain-google-genai = ">=2.1.2,<3.0.0"
langchain-huggingface = ">=0.1.2,<0.2.0"
langchain-ollama = ">=0.3.1,<0.4.0"
langchain-ai21 = ">=1.1.0,<2.0.0"
langchain-upstage = ">=0.6.0,<0.7.0"
langchain-perplexity = ">=0.1.0,<0.2.0"
aioboto3 = ">=14.1.0,<15.0.0"
tokenizers = ">=0.19.1,<0.20.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
